@@ -54,4 +54,4 @@ module_exit(akvcam_uninit)
 MODULE_LICENSE("GPL");
 MODULE_AUTHOR("Gonzalo Exequiel Pedone");
 MODULE_DESCRIPTION(AKVCAM_DRIVER_DESCRIPTION);
-MODULE_VERSION("1.2.2");
+MODULE_VERSION("1.2.3");
